--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -5,8 +5,9 @@ form {
   align-items: center;
   border-radius: 10px;
   padding: 30px;
-  background-color: rgba(178 146 171 / 50%);
-  box-shadow: 0px 0px 8px 0px #33333347;
+  border: solid;
+  border-color: #7b9ae2;
+  box-shadow: 0px 0px 8px 0px #7b9ae2;
 }
 
 input {
@@ -19,7 +20,7 @@ input {
   border-radius: 5px;
   /* width: 70%; */
   display: block;
-  box-shadow: inset 0px 0px 8px 0px #33333347;
+  box-shadow: inset 0px 0px 8px 0px #7b9ae2;
 }
 
 form > button {
@@ -31,12 +32,13 @@ form > button {
   border: none;
   box-shadow: 0 0 2px #333;
   cursor: pointer;
-  background-color: rgba(178, 146, 171, 0.742);
+  border: solid;
+  border-color: #7b9ae2;
   border-radius: 5px;
   transition-duration: 400ms;
 }
 
 form > button:hover {
-  transform: scale(1.1);
-  background-color: rgba(79, 183, 93, 0.2);
+  transform: scale(1.3);
+  background-color: #cfdbf7;
 }
