--- a/src/index.css
+++ b/src/index.css
@@ -16,3 +16,10 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+h1,
+h2 {
+  font-size: 30px;
+  font-weight: 600;
+  text-align: center;
+  color: #4260aa;
+}
