--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -26,16 +26,17 @@ input {
 form > button {
   font-size: 20px;
   font-weight: 800;
-  color: rgba(51, 51, 51, 0.8);
+  color: #4260aa;
   margin-top: 30px;
   padding: 15px;
   border: none;
-  box-shadow: 0 0 2px #333;
+  box-shadow: 0 0 2px #7b9ae2;
   cursor: pointer;
   border: solid;
   border-color: #7b9ae2;
   border-radius: 5px;
   transition-duration: 400ms;
+  background-color: white;
 }
 
 form > button:hover {
