--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -21,17 +21,18 @@ p {
 li > button {
   font-size: 15px;
   font-weight: 700;
-  color: rgba(51, 51, 51, 0.8);
+  color: #4260aa;
   padding: 5px;
-  border: none;
-  box-shadow: 0 0 2px #333;
+  box-shadow: 0 0 2px #7b9ae2;
   cursor: pointer;
-  background-color: rgba(178, 146, 171, 0.742);
+  border: solid;
+  border-color: #7b9ae2;
+  background-color: white;
   border-radius: 5px;
   transition-duration: 400ms;
 }
 
 li > button:hover {
-  transform: scale(1.1);
-  background-color: rgba(255, 0, 0, 0.2);
+  transform: scale(1.3);
+  background-color: #cfdbf7;
 }
